Fixes Expand / Collapse buttons for widgets

--- a/src/OrchardCore.Modules/OrchardCore.Flows/wwwroot/Styles/flows.edit.css
+++ b/src/OrchardCore.Modules/OrchardCore.Flows/wwwroot/Styles/flows.edit.css
@@ -14,3 +14,6 @@
     display: none;
 }
 
+.widget-editor:not(.collapsed) .widget-editor-btn-expand {
+    display: none;
+}
